--- a/style.css
+++ b/style.css
@@ -10,7 +10,38 @@
 
 body{
     background-color: #000;
-    
+    font-family: "Open Sans", sans-serif;
+    overflow: hidden;
+}
+
+button,
+select{
+    font-family: "Open Sans", sans-serif;
+}
+
+button{
+    font-size: 1.1em;
+    background-color: #fff;
+    border: 1px solid #bbbbbb;
+    border-radius: 8px;
+    cursor: pointer;
+}
+
+select{
+    padding: .5em;
+    font-size: 1.1em;
+}
+
+button:hover{
+    background-color: #505050;
+    color: #fff;
+}
+
+#form-data{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .color-selection{
@@ -23,25 +54,24 @@ body{
 
 .color-picker{
     border: none;
-    width: 80px;
-    height: 50px;
+    width: 50px;
+    height: 40px;
 }
 
 .colors{
-    min-height: 50vh;
+    min-height: 70vh;
     width: 80%;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-columns: repeat(5, 1fr);
+    text-align: center;
+    color:#fff;
 }
 
-.color-1,
-.color-2,
-.color-3,
-.color-4,
-.color-5{
-    padding: 100% 0;
-    color: #fff;
+.text{
+    font-size: 1.2em;
+    margin-top: 1em;
 }
+
 
 .color-1{
     background-color: #F55F5A;
